quick and dirty solution to ensure content is visible without js in most browsers

--- a/tbx/static_src/sass/components/_tabs.scss
+++ b/tbx/static_src/sass/components/_tabs.scss
@@ -94,6 +94,10 @@
 
         &--hidden {
             display: none;
+
+            @media (scripting: none) {
+                display: block;
+            }
         }
     }
 
